src/test/resources/tokens/invalid/integer_out_of_bounds_negative_decimal.unpick
unpick v3
group int
    -2147483649